# NetworkAnalyzer

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  rebuild.sh  script.sh
include/network_analyzer/: analysis_engine.h  packet_capture.h
include/network_analyzer/gui/: main_window.h
src/: CMakeLists.txt  main.cpp
src/network_analyzer/: analysis_engine.cpp  main.cpp  packet_capture.cpp
src/network_analyzer/gui/: main_window.cpp  main_window.ui
test/: CMakeLists.txt
tests/: CMakeLists.txt
